<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.4.0</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.sudeepcv</groupId>
	<artifactId>SpringbootApiServer</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>SpringbootApiServer</name>
	<description>Demo project for k8s</description>
	<url/>
	<licenses>
		<license/>
	</licenses>
	<developers>
		<developer/>
	</developers>
	<scm>
		<connection/>
		<developerConnection/>
		<tag/>
		<url/>
	</scm>
	<properties>
		<java.version>17</java.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
		</dependency>
<!--		<dependency>-->
<!--			<groupId>jakarta.persistence</groupId>-->
<!--			<artifactId>jakarta.persistence-api</artifactId>-->
<!--			<version>3.2.0</version>-->
<!--		</dependency>-->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>

					<image>
						<name>cvsudeep/springboot-api-server</name>
						<publish>true</publish>
					</image>
					<docker>
						<publishRegistry>
							<username>${env.DOCKER_USERNAME}</username>
							<password>${env.DOCKER_PASSWORD}</password>
							<url>https://docker.io</url>
						</publishRegistry>
					</docker>

				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<release>17</release>
					<compilerArgs>
						<arg>--add-modules</arg>
						<arg>java.sql</arg>
					</compilerArgs>
				</configuration>
			</plugin>


		</plugins>

	</build>

</project>
